2010-09-30  Marek Kowalski <mkowalski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/test/test_http.py
	Support for more than one sink in streamer component.

2010-09-28  Marek Kowalski <mkowalski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	Code refactoring in httpstreamer module.
	Split long methods into smaller parts so that it is
	easy to overload them in child class.

2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/effects/audioresync/Makefile.am:
	Add missing files to Makefile.am
	* flumotion/component/effects/audioresync (svn:ignore):
	Add missing files to svn:ignore


2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt
	* ChangeLog:
	* configure.ac:
	* flumotion/component/effects/Makefile.am:
	* flumotion/component/effects/audioresync/Makefile.am:
	* flumotion/component/effects/audioresync/__init__.py:
	* flumotion/component/effects/audioresync/admin_gtk.py:
	* flumotion/component/effects/audioresync/audioresync.glade:
	* flumotion/component/effects/audioresync/audioresync.py:
	* flumotion/component/effects/audioresync/audioresync.xml:
	Add audio resynchroniser effect

2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt
	* flumotion/common/registry.py:
	Add more logging to the registry

2010-10-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt
	* flumotion/component/decoders/generic/generic.py:
	Fix generic decoder's synchronisation element:
	 - Make it thread safe (audio and video can be in different threads).
	 - Retimestamp buffers using a common sync point for audio and video
		and adding the buffer's running time calculated from the start of