@@ -1,3 +1,9 @@
+2010-10-01  Marek Kowalski <mkowalski@flumotion.com>
+
+	* flumotion/component/producers/icecast/icecast.py:
+	Switch the iradio-mode on in icecast producer.
+	Plug the icydemux component to produce audio stream.
+
 2010-09-30  Marek Kowalski <mkowalski@flumotion.com>
 
 	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
